--- a/Prototype/AndroidManifest.xml
+++ b/Prototype/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="15"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -20,7 +20,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/village_icon"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -37,7 +37,7 @@
 
         <provider
             android:name="com.dipeca.bookactivity.PrototypeProvider"
-            android:authorities="com.dipeca.prototypeprovider" />
+            android:authorities="com.dipeca.adventurestoriesprovider" />
 
         <receiver android:name="com.dipeca.bookactivity.MusicIntentReceiver" >
             <intent-filter>
@@ -46,6 +46,7 @@
         </receiver>
         
         <activity android:name="com.dipeca.buildstoryactivity.BuildPageActivity"></activity>
+        <activity android:name="com.dipeca.buildstoryactivity.ReadStoryActivity"></activity>
     </application>
 
 </manifest>
