--- a/Prototype/project.properties
+++ b/Prototype/project.properties
@@ -12,3 +12,4 @@
 
 # Project target.
 target=android-18
+android.library.reference.1=../../../../../Applications/adt-bundle-mac-x86_64-20140702/facebook-android-sdk-3.16/facebook
