--- a/Prototype/project.properties
+++ b/Prototype/project.properties
@@ -13,3 +13,5 @@
 # Project target.
 target=android-18
 android.library.reference.1=../../../../../Applications/adt-bundle-mac-x86_64-20140702/facebook-android-sdk-3.16/facebook
+android.library.reference.2=../../../../../Applications/adt-bundle-mac-x86_64-20140702/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.3=../../../Documents/workspace/ReadingProjectLibrary
